# SubtitleTools

./: .coveragerc  .gitattributes  .gitignore  README.md  SubtitleTools.spec  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: Build-Release-PYPI.yml
docs/: cli-reference.md  development.md  installation.md  translation.md  troubleshooting.md  usage.md
pyinstaller_hooks/: hook-numba.py  hook-scipy.py  hook-torch.py
scripts/: generate_file_version_info.py  pyi_build.py  pyi_entry.py  verify.py
src/subtitletools/: __init__.py  __main__.py  _version.py  cli.py
src/subtitletools/config/: __init__.py  settings.py
src/subtitletools/core/: __init__.py  subtitle.py  transcription.py  translation.py  workflow.py
src/subtitletools/utils/: __init__.py  audio.py  common.py  encoding.py  format_converter.py  postprocess.py  subtitle_fixes.py
src/subtools/: __init__.py  cli.py
src/subtools/config/: settings.py
src/subtools/core/: __init__.py  subtitle.py  transcription.py  translation.py  workflow.py
src/subtools/utils/: audio.py  common.py  format_converter.py  postprocess.py  subtitle_fixes.py
tests/: __init__.py  conftest.py  test_cli.py  test_complex_known_srt.py  test_config_settings.py  test_core_subtitle.py  test_core_transcription_simple.py  test_core_translation.py  test_core_workflow.py  test_init.py  test_integration.py  test_utils_audio.py  test_utils_common.py  test_utils_encoding.py  test_utils_format_converter.py  test_utils_postprocess.py  test_utils_subtitle_fixes.py  test_version.py
tests/test_data/: complex_known.srt  complex_known_google_es.srt  complex_known_translations.json  test_video_transcript.txt
