[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitletools"
version = "1.0.0"
authors = [
    {name = "tboy1337", email = "tboy1337.unchanged733@aleeas.com"},
]
description = "Complete subtitle workflow tool: transcribe, translate, and process subtitles"
readme = "README.md"
license = {text = "Commercial Restricted License (CRL)"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["subtitle", "transcription", "translation", "whisper", "srt", "video", "audio"]

dependencies = [
    # Core transcription dependencies
    "openai-whisper",
    "torch",
    "scipy",
    "numpy",
    "tqdm",
    # Core translation dependencies
    "pyexecjs",
    "srt",
    "requests",
    "jieba",
]

[project.optional-dependencies]
dev = [
    # Core Testing Packages
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-xdist",
    "pytest-mock",
    "pytest-cov",
    "pytest-html",
    "pytest-json-report",
    "pytest-benchmark",
    "pytest-rerunfailures",
    # Linting and code quality
    "pylint",
    "mypy",
    "black",
    "isort",
    # Development dependencies
    "twine",
    "wheel",
    "setuptools",
]
gpu = [
    "torch[cuda]",
]
postprocess = [
    # Optional dependencies for post-processing
]

[project.urls]
"Homepage" = "https://github.com/tboy1337/SubtitleTools"
"Bug Tracker" = "https://github.com/tboy1337/SubtitleTools/issues"
"Documentation" = "https://github.com/tboy1337/SubtitleTools/blob/main/README.md"
"Repository" = "https://github.com/tboy1337/SubtitleTools.git"

[project.scripts]
subtitletools = "subtitletools.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["subtitletools*"]

# Black formatting configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

