[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitletools"
version = "1.0.2"
description = "Complete subtitle workflow tool: transcribe, translate, and process subtitles"
readme = "README.md"
license = "LicenseRef-CRL-1.1"
license-files = ["LICENSE.md"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["subtitle", "transcription", "translation", "whisper", "srt", "video", "audio"]

dependencies = [
    "openai-whisper",
    "torch",
    "scipy",
    "numpy",
    "tqdm",
    "pyexecjs",
    "srt",
    "requests",
    "jieba",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-mock",
    "pytest-cov",
    "pylint",
    "mypy",
    "autopep8",
    "black",
    "isort",
    "bandit",
    "pip-audit",
]

[project.urls]
Homepage = "https://github.com/tboy1337/SubtitleTools"
"Bug Tracker" = "https://github.com/tboy1337/SubtitleTools/issues"
Documentation = "https://github.com/tboy1337/SubtitleTools/blob/main/README.md"
Repository = "https://github.com/tboy1337/SubtitleTools.git"

[project.scripts]
subtitletools = "subtitletools.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["subtitletools*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
subtitletools = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | htmlcov
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/venv/*",
    "*/.venv/*",
    "*/virtualenv/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*",
    "*/htmlcov/*",
]
known_first_party = ["subtitletools"]
known_third_party = [
    "pytest",
    "whisper",
    "torch",
    "numpy",
    "scipy",
    "tqdm",
    "srt",
    "requests",
    "jieba",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# Bandit skips are intentional false positives for a CLI multimedia tool:
# B311: random for user-agent rotation and retry jitter, not cryptography
# B310: urllib.request.urlopen calls Google Translate over HTTPS
# B404/B603: subprocess invokes FFmpeg for audio extraction
# B110/B112: broad exception handling when probing optional FFmpeg install locations
[tool.bandit]
skips = ["B311", "B310", "B404", "B603", "B110", "B112"]
